<resources>
	<string name="app_name">AdventurePhotoFrame</string>

	<string name="loading">Loading…</string>
	<string name="title_activity_photo_info">Photo Info</string>
	<string name="title_activity_personal_message">Personal Message</string>
	<string name="TUTORIAL_tutorial">Tutorial</string>
	<string name="TUTORIAL_next">Next</string>
	<string name="TUTORIAL_photo_info">Photo Info</string>
	<string name="TUTORIAL_settings">Settings</string>
	<string name="TUTORIAL_about">About</string>
	<string name="SETTINGS_title">Settings</string>

	<string name="SETTINGS_wifi_title">Current WiFi</string>
	<string name="SETTINGS_wifi_ssid">SSID: %1$s</string>
	<string name="SETTINGS_wifi_status">Status: %1$s</string>

	<string name="SETTINGS_version">v: %1$s (%2$d)</string>
	<string name="SETTINGS_id">id: %1$s</string>

	<string name="SETTINGS_WIFI_ITEM_no_ssid"><![CDATA[<i>&lt;hidden&gt;</i>]]></string>

	<string name="SETTINGS_WIFIDIALOG_title">Connect to Network</string>

	<string name="SETTINGS_frequency">%1$d minutes</string>
	<string name="WIFI_strength">%1$d dBm</string>

	<string name="SETTINGS_WIFIDIALOG_ssid">SSID</string>
	<string name="SETTINGS_WIFIDIALOG_password">Password</string>
	<string name="SETTINGS_WIFIDIALOG_connect">Connect</string>
	<string name="SETTINGS_WIFIDIALOG_cancel">Cancel</string>

	<string name="ABOUT_title">About</string>

	<string name="DEBUG_title">Debug</string>

	<string name="TOAST_update_frequency_set">Update frequency set to %1$d minutes</string>
	<string name="TOAST_wifi_set">WiFI network set to: %1$s</string>
	<string name="ABOUT_HEADER">We Think Adventure.Rocks</string>
	<string name="ABOUT_url">www.wethinkadventure.rocks</string>
	<string name="ABOUT_attribution"><![CDATA[All photos taken by Stacy & Adam or on one of their trips]]></string>
	<string name="ABOUT_feedback">Send Questions or Feedback to: darkrockstudios@gmail.com</string>
	<string name="ABOUT_logo_description">Logo</string>
	<string name="SETTINGS_debug">Debug</string>
	<string name="SETTINGS_update_frequency">Update Frequency</string>
	<string name="SETTINGS_wifi_networks_title">WiFi Networks</string>

	<string name="WELCOME_title">Welcome!</string>

	<string name="WELCOME_slide1_title">Adventure.Rocks</string>
	<string name="WELCOME_slide1_description">Welcome to your Adventure.Rocks photo frame!\nThe next few screens will introduce you to what it can do. Lets get started!</string>
	<color name="WELCOME_slide1_background">#2a2a2a</color>

	<string name="WELCOME_slide2_title">Photo\'s From Adam &amp; Stacy</string>
	<string name="WELCOME_slide2_description">All of the photos you\'ll see on here were taken by us, or of us.</string>
	<color name="WELCOME_slide2_background">#2875cc</color>

	<string name="WELCOME_slide3_title">Always Fresh</string>
	<string name="WELCOME_slide3_description">A new photo every 5 minutes. You can change this interval in the settings.</string>
	<color name="WELCOME_slide3_background">#d9a011</color>

	<string name="WELCOME_slide4_title">Always Up-to-date</string>
	<string name="WELCOME_slide4_description">As we take new photos, they will automatically start showing up here.</string>
	<color name="WELCOME_slide4_background">#2ca41c</color>

	<string name="WELCOME_slide5_title">More than just Photos</string>
	<string name="WELCOME_slide5_description">You can tap any photo to get more info, including titles, descriptions, and maps of where it was taken.</string>
	<color name="WELCOME_slide5_background">#a4651c</color>

	<string name="WELCOME_slide6_title">Controlling your Photo Frame</string>
	<string name="WELCOME_slide6_description">The 4 corners of your Photo Frame each perform a separate action. To see what those actions are, tap the bottom left corner of a photo to get a Tutorial overlay.</string>
	<color name="WELCOME_slide6_background">#a41c8d</color>

	<string name="WELCOME_slide7_title">Settings</string>
	<string name="WELCOME_slide7_description">If you need to adjust settings later, like change your WiFi password, tap the top right of a photo to enter the Settings screen.</string>
	<color name="WELCOME_slide7_background">#84a41c</color>

	<string name="WELCOME_slide8_title">That\'s It!</string>
	<string name="WELCOME_slide8_description">The last thing we need to do is get your Photo Frame connected to your WiFi. When you hit DONE you will be taken to the Settings screen where you can find your network and enter your password.\n\nWe hope you enjoy sharing in our Adventures!\n- Adam &amp; Stacy</string>
	<string name="ABOUT_welcome_rerun">Re-run Welcome tutorial</string>
	<string name="ABOUT_reboot">Reboot</string>
	<string name="ABOUT_update_channel_title">Update Channel:</string>
	<string name="ABOUT_update_channel_stable">Stable</string>
	<string name="ABOUT_update_channel_beta">Beta</string>
	<string name="ABOUT_update_channel_dev">Dev</string>
	<string name="ABOUT_update_channel_canary">Canary</string>
	<string name="SETTINGS_hidden_network">Add Network</string>
	<string name="SETTINGS_update_button">Start Update</string>
	<string name="SETTINGS_update_title">System Update</string>
	<string name="SETTINGS_UPDATE_status_idle">Up to date</string>
	<string name="SETTINGS_UPDATE_status_error">Error</string>
	<string name="SETTINGS_UPDATE_status_checking">Checking for updates…</string>
	<string name="SETTINGS_UPDATE_status_available">Update available!</string>
	<string name="SETTINGS_UPDATE_status_downloading">Downloading update…</string>
	<string name="SETTINGS_UPDATE_status_finalizing">Finalizing update…</string>
	<string name="SETTINGS_UPDATE_status_reboot">Reboot to finish update.</string>
	<string name="SETTINGS_reboot_button">Reboot</string>
	<string name="WIFIDIALOG_show_password">Show Password</string>
	<color name="WELCOME_slide8_background">#b2371c</color>

	<string name="PHOTO_INFO_no_description"><i>No Description</i></string>
	<string name="PHOTO_INFO_no_location">No location data available</string>
</resources>
