<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.darkrockstudios.iot.adventurephotoframe.AboutActivity"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/ABOUT_HEADER"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ABOUT_header"
        android:textAppearance="@style/LargeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ABOUT_logo"
        android:layout_marginEnd="@dimen/default_margin"/>

    <TextView
        android:text="@string/ABOUT_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:id="@+id/ABOUT_url"
        android:textAppearance="@style/MediumText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ABOUT_header"
        app:layout_constraintEnd_toStartOf="@+id/ABOUT_logo"
        android:layout_marginEnd="@dimen/default_margin"/>

    <TextView
        android:text="@string/ABOUT_attribution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:textAppearance="@style/SmallText"
        android:id="@+id/ABOUT_attribution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ABOUT_url"
        app:layout_constraintEnd_toStartOf="@+id/ABOUT_logo"
        android:layout_marginEnd="@dimen/default_margin"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/ABOUT_logo"
        android:contentDescription="@string/ABOUT_logo_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/ABOUT_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SmallText"
        android:id="@+id/ABOUT_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ABOUT_id"
        android:textAlignment="viewStart"
        />

    <TextView
        android:id="@+id/ABOUT_id"
        tools:text="id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ABOUT_version"
        tools:text="Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ABOUT_id"/>

    <Button
        android:text="@string/ABOUT_welcome_rerun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ABOUT_welcome_rerun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ABOUT_version"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ABOUT_update_channel_spinner"
        app:layout_constraintTop_toBottomOf="@+id/ABOUT_update_channel_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/ABOUT_update_channel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ABOUT_update_channel_title"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/ABOUT_logo"
        app:layout_constraintStart_toStartOf="@+id/ABOUT_update_channel_spinner"/>
</android.support.constraint.ConstraintLayout>